fix: button alignment

--- a/styles.css
+++ b/styles.css
@@ -178,7 +178,7 @@ h3{
 }
 .button-container{
     position: absolute;
-    top: 60%;
+    top: 53%;
     /* margin-top: 10%; */
     left: 47%;
     margin: 1rem;
